--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is apple.</p>
+<p>This is an apple.</p>
+    <p>This is a banana.</p>
 
 </body>
 </html>
