--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This is a banana.</p>
     <p>This is a cake.</p>
     <p>This is a seafood.</p>
+    <p>This is a dog.</p>
 </body>
 </html>
